--- a/log2seq/data/sample.conf
+++ b/log2seq/data/sample.conf
@@ -10,11 +10,12 @@ fixip_net = true
 
 [header]
 syslog_ts = ^((?P<year>\d{4})\s+)?
-             (?P<bmonth>[a-zA-Z]{3})\s+
+             (?P<month>[a-zA-Z]{3})\s+
              (?P<day>\d{1,2})\s+
 	     (?P<hour>\d{2}):
 	     (?P<minute>\d{2}):
-	     (?P<second>\d{2})\s+
+	     (?P<second>\d{2})
+	     (\s+(?P<tz>[A-Z]{3,5}))?\s+
 	     (?P<host>([a-zA-Z0-9][a-zA-Z0-9:.-]*[a-zA-Z0-9]|[a-zA-Z0-9]))\s*
 	     (?P<message>.*)$
 syslog_dt = ^(?P<year>\d{4})-
@@ -22,7 +23,9 @@ syslog_dt = ^(?P<year>\d{4})-
 	     (?P<day>\d{2})\s+
 	     (?P<hour>\d{2}):
 	     (?P<minute>\d{2}):
-	     (?P<second>\d{2})\s+
+	     (?P<second>\d{2})
+	     (\.(?P<microsecond>\d{6}))?
+	     ((?P<tz>[+-]\d{4}))?\s+
 	     (?P<host>([a-zA-Z0-9][a-zA-Z0-9:.-]*[a-zA-Z0-9]|[a-zA-Z0-9]))\s*
 	     (?P<message>.*)$
 
